--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body, html {
 	font-size: 14px;
 	background-color: #1f2025;
 	color: #ffffff;
+        background-image: url("https://pngimg.com/d/iphone_PNG5729.png");
 }
 
 a {
